-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7.0
-
None
-
-
828ac0099 (dev), 659c8965d (6.8), 31bb9ea63 (6.7)
When running the Shapes example with the curve renderer (QT_QUICKSHAPES_BACKEND=curverenderer) and opening the gallery, one of the cases has broken rendering.
It looks like this is related to the intersection solver in Qt 6.7, because it does not happen with Qt 6.6 and when setting QT_QUICKSHAPES_DISABLE_INTERSECTION_SOLVER=1 it looks good again.